cmake_minimum_required(VERSION 3.9)
project(Project_D)

set(CMAKE_CXX_STANDARD 11)

add_executable(Project_D
        UtilitiesDJD/BitsAndPieces/StringConversions.cpp
        UtilitiesDJD/BitsAndPieces/StringConversions.hpp
        UtilitiesDJD/CompileTimeVectorsAndMatrices/MatrixVectorSpace.cpp
        UtilitiesDJD/CompileTimeVectorsAndMatrices/MatrixVectorSpace.hpp
        UtilitiesDJD/CompileTimeVectorsAndMatrices/VectorSpace.cpp
        UtilitiesDJD/CompileTimeVectorsAndMatrices/VectorSpace.hpp
        UtilitiesDJD/CompileTimeVectorsAndMatrices/VectorSpaceMechanisms.cpp
        UtilitiesDJD/CompileTimeVectorsAndMatrices/VectorSpaceMechanisms.hpp
        UtilitiesDJD/ExcelDriver/ExcelDriverLite.cpp
        UtilitiesDJD/ExcelDriver/ExcelDriverLite.hpp
        UtilitiesDJD/ExcelDriver/ExcelHelloWorld.cpp
        UtilitiesDJD/ExcelDriver/ExcelImports.cpp
        UtilitiesDJD/ExcelDriver/TestMatrixExcel.cpp
        UtilitiesDJD/ExcelDriver/TestMultiCurve.cpp
        UtilitiesDJD/ExcelDriver/TestSingleCurve.cpp
        UtilitiesDJD/ExcelDriver/TestTwoCurve.cpp
        UtilitiesDJD/ExcelDriver/TestVectorExcel.cpp
        UtilitiesDJD/ExcelDriver/Utilities.hpp
        UtilitiesDJD/ExceptionClasses/DatasimException.cpp
        UtilitiesDJD/ExceptionClasses/DatasimException.hpp
        UtilitiesDJD/Geometry/Range.cpp
        UtilitiesDJD/Geometry/Range.hpp
        UtilitiesDJD/Matrices/NestedMatrix.hpp
        UtilitiesDJD/RNG/NormalGenerator.cpp
        UtilitiesDJD/RNG/NormalGenerator.hpp
        UtilitiesDJD/Test101/TestArrayMechanisms.cpp
        UtilitiesDJD/Test101/TestMatrixMultiplication.cpp
        UtilitiesDJD/Test101/TestMatrixVectorSpace.cpp
        UtilitiesDJD/Test101/TestVectorSpace.cpp
        UtilitiesDJD/VectorsAndMatrices/Array.cpp
        UtilitiesDJD/VectorsAndMatrices/Array.hpp
        UtilitiesDJD/VectorsAndMatrices/ArrayMechanisms.cpp
        UtilitiesDJD/VectorsAndMatrices/ArrayMechanisms.hpp
        UtilitiesDJD/VectorsAndMatrices/ArrayStructure.cpp
        UtilitiesDJD/VectorsAndMatrices/ArrayStructure.hpp
        UtilitiesDJD/VectorsAndMatrices/FullArray.cpp
        UtilitiesDJD/VectorsAndMatrices/FullArray.hpp
        UtilitiesDJD/VectorsAndMatrices/FullMatrix.cpp
        UtilitiesDJD/VectorsAndMatrices/FullMatrix.hpp
        UtilitiesDJD/VectorsAndMatrices/Matrix.cpp
        UtilitiesDJD/VectorsAndMatrices/Matrix.hpp
        UtilitiesDJD/VectorsAndMatrices/MatrixMechanisms.cpp
        UtilitiesDJD/VectorsAndMatrices/MatrixMechanisms.hpp
        UtilitiesDJD/VectorsAndMatrices/MatrixStructure.cpp
        UtilitiesDJD/VectorsAndMatrices/MatrixStructure.hpp
        UtilitiesDJD/VectorsAndMatrices/NestedMatrix.hpp
        UtilitiesDJD/VectorsAndMatrices/NumericMatrix.cpp
        UtilitiesDJD/VectorsAndMatrices/NumericMatrix.hpp
        UtilitiesDJD/VectorsAndMatrices/Vector.cpp
        UtilitiesDJD/VectorsAndMatrices/Vector.hpp
        OptionData.hpp
        TestMC.cpp)
