cmake_minimum_required(VERSION 3.9)
project(homework_level1)

set(CMAKE_CXX_STANDARD 11)

add_executable(homework_level1
        freq.c
        freq.h
        level1.3.cpp
        level1.3.hpp
        level1.4.cpp
        level1.4.hpp
        level1.5.cpp
        level1.5.hpp
        Main.c
        Print.c
        Print.h)
