cmake_minimum_required(VERSION 3.9)
project(level2_homework)

set(CMAKE_CXX_STANDARD 11)

add_executable(level2_homework
        1.9.1/main.c
        1_7_2/main.c
        1_7_2/main.cpp
        1_7_3/main.cpp
        1_7_4/main.cpp
        1_8_1/main.cpp
        1_9_2/main.cpp
        Defs.h
        homework_1_6.c
        Main.c)
